--- a/css/style.css
+++ b/css/style.css
@@ -211,7 +211,7 @@ nav .nav-link {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
     gap: 10px;
-    margin-bottom: 40px;
+    /* margin-bottom: 40px; */
     background-color: #f8eee6;
     padding: 40px;
 
